# dlibExamples

./: CMakeLists.txt  README.md
executable/: CMakeLists.txt  deepfeatureextration.cpp  detectface.cpp  dnn_face_recognition_ex.cpp  face_detection_ex_onefolder.cpp  face_detection_ex_oneimg.cpp  face_landmark_detection_ex.cpp  pufa_CameraDetectandMakeFacePool.cpp  pufa_DetectFaceandVerify.cpp  pufa_EncodeFacePool.cpp  test_recognition_accuracy_ex.cpp
include/Common/: OpencvText.h
include/dlibface/: FaceDetection.h  deepFaceProcess.h  faceDescriptorManager.h  protoFaceEncode.pb.h
include/myfUtils/: FileOperator.h  MatOperation.h  RectangleOperation.h
res/: face_encodes.txt  parameters.ini  parameters_facedetection.ini
src/: CMakeLists.txt
src/Common/: OpencvText.cpp  parameterReader.cpp
src/dlibface/: FaceDetection.cpp  deepFaceProcess.cpp  faceDescriptorManager.cpp  protoFaceEncode.pb.cc
src/myfUtils/: FileOperator.cpp  MatOperation.cpp  RectangleOperation.cpp
